--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     function time() {
     let date = new Date();
-    let hours = date.getHours() < 10 ? '0' + date.getHours() : date.getHours();
+    let hours = date.getHours();
     let min = date.getMinutes() < 10 ? '0' + date.getMinutes() : date.getMinutes();
     let sec = date.getSeconds() < 10 ? '0' + date.getSeconds() : date.getSeconds();
 
